force-app/main/default/objects/Apttus__IDEJob__c/Apttus__IDEJob__c.object-meta.xml
<CustomObject>
    <description>IDE Job table, which will be used to communicate to KIRA based on different job status</description>
    <label>IDE Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>