force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__AgreementPreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementPreviousStatus__c</fullName>
    <description>This field stores the former Agreement Status</description>
    <inlineHelpText>Previous status of the Agreement</inlineHelpText>
    <label>Agreement Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>