force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__AnalysedAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AnalysedAttachmentId__c</fullName>
    <description>ID of the Analyzed Attachment/File received from the IDE</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the Analyzed Attachment/File received from the IDE</inlineHelpText>
    <label>Analyzed Attachment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>