force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__AnalysedHighlightedAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AnalysedHighlightedAttachmentId__c</fullName>
    <description>Analyzed Highlighted Attachment/file Id receive from IDE</description>
    <inlineHelpText>Please provide analyzed highlighted attachment/file ID receive from IDE</inlineHelpText>
    <label>Analysed Highlighted Attachment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>