force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AttachmentId__c</fullName>
    <description>ID of the Attachment or File</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the Attachment or File</inlineHelpText>
    <label>Attachment/File</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>