force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__ExceptionDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExceptionDetail__c</fullName>
    <description>Includes exception details from Intelligent Discovery provider.</description>
    <inlineHelpText>Includes exception details from Intelligent Discovery provider.</inlineHelpText>
    <label>Exception Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>