force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__ExtractedJSONDocId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExtractedJSONDocId__c</fullName>
    <description>ID of the extracted JSON Document received from KIRA</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the extracted JSON Document received from KIRA</inlineHelpText>
    <label>Extracted JSON Doc Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>