force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__IsaLargeFileUploaded__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsaLargeFileUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox to indicate that a large file is uploaded.</description>
    <inlineHelpText>Select the checkbox to indicate that a large file is uploaded.</inlineHelpText>
    <label>Is a Large File Uploaded?</label>
    <type>Checkbox</type>
</CustomField>