force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__IsTextMatchAlgorithmRun__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsTextMatchAlgorithmRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if text-match algorithm is run or not</description>
    <inlineHelpText>Flag to indicate if text-match algorithm is run or not</inlineHelpText>
    <label>Is Text Match Algorithm Run</label>
    <type>Checkbox</type>
</CustomField>