force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__IsUnzipRequire__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsUnzipRequire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether unzip is required or not</description>
    <inlineHelpText>Indicates whether unzip is required or not</inlineHelpText>
    <label>Is Unzip Required</label>
    <type>Checkbox</type>
</CustomField>