force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__IsUnzipRequireHighlighted__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsUnzipRequireHighlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if unzip is required or not</description>
    <inlineHelpText>Flag to indicate if unzip is required or not</inlineHelpText>
    <label>Is Unzip Require Highlighted</label>
    <type>Checkbox</type>
</CustomField>