force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__JobDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__JobDetail__c</fullName>
    <description>Additional detail of the job</description>
    <inlineHelpText>Additional detail of the job</inlineHelpText>
    <label>Job Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>