force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__JobStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__JobStatus__c</fullName>
    <description>The Job Status</description>
    <inlineHelpText>The Job Status</inlineHelpText>
    <label>Job Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>