force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__JobType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__JobType__c</fullName>
    <description>The Job Type</description>
    <externalId>true</externalId>
    <inlineHelpText>The Job Type</inlineHelpText>
    <label>Job Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>