force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__MonitorIDDstatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MonitorIDDstatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether IDD status is getting monitored.</description>
    <inlineHelpText>Indicates whether IDD status is getting monitored.</inlineHelpText>
    <label>Monitor IDD status?</label>
    <type>Checkbox</type>
</CustomField>