force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__Mutex__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Mutex__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Mutex variable to ensure only one process may work with the record at a time</description>
    <inlineHelpText>Mutex variable to ensure only one process may work with the record at a time</inlineHelpText>
    <label>Mutex</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>