force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__NumberOfPages__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NumberOfPages__c</fullName>
    <description>The number of pages of the Document being imported.</description>
    <inlineHelpText>This field displays the Number of pages the document imported.</inlineHelpText>
    <label>Number Of Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>