force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__RetryCount__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RetryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the IDE job needs to be rerun in case of failure</description>
    <inlineHelpText>Provide the IDE job retry count</inlineHelpText>
    <label>RetryCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>