force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__ScanQuality__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ScanQuality__c</fullName>
    <description>Scan quality of the document</description>
    <inlineHelpText>Scan quality of the document</inlineHelpText>
    <label>Scan Quality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>