force-app/main/default/objects/Apttus__IDEJob__c/fields/Apttus__SourceUseCase__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SourceUseCase__c</fullName>
    <defaultValue>&quot;Create Offline Agreement&quot;</defaultValue>
    <description>Indicates the use case for which the record is created</description>
    <inlineHelpText>Indicates the use case for which the record is created</inlineHelpText>
    <label>Source Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Import Offline</fullName>
            </value>
            <value>
                <fullName>Save and Stored Execute</fullName>
            </value>
            <value>
                <fullName>Upload Signed Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>